--- a/app/sass/components/_page-header.scss
+++ b/app/sass/components/_page-header.scss
@@ -27,6 +27,7 @@
   position: absolute;
   top: 14px;
   right: 70px;
+  display: none;
 
   .no-js & {
     right: 10px;
@@ -55,7 +56,7 @@
 }
 
 .page-header__areas {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 1 / 2 / 2 / 3;
   position: absolute;
   z-index: 1;
   width: 100%;
