--- a/app/sass/components/_services.scss
+++ b/app/sass/components/_services.scss
@@ -51,7 +51,6 @@
 .services__nest {
   position: absolute;
   top: 0;
-  z-index: 3;
   display: none;
   width: 100%;
 
